Adjust Layout to correctly reference the updated 'authenticate' field structure.

--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -114,9 +114,9 @@ $this->inlineScript()
                         <li class = "nav-item">
                             <span class="navbar-text">
                                 <?php
-                                    echo $this->IdentHelper()['persondoc']['0']['firstname'].
-                                        ' '.
-                                        $this->IdentHelper()['persondoc']['0']['lastname'];
+                                echo $this->IdentHelper()['firstname'].
+                                    ' '.
+                                    $this->IdentHelper()['lastname'];
                                 ?>
                             </span>
                         </li>
