Added User Registration.

--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -120,6 +120,11 @@ $this->inlineScript()
                                 ?>
                             </span>
                         </li>
+                        <li class="nav-item">
+                            <a href="<?= $this->serverUrl($this->url('registration')) ?>" class="nav-link">
+                                Register
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
