Declare strict types & use LF as line feed

--- a/src/App/templates/app/about.phtml
+++ b/src/App/templates/app/about.phtml
@@ -1,4 +1,6 @@
-<?php $this->headTitle('About'); ?>
+<?php
+declare(strict_types=1);
+$this->headTitle('About'); ?>
 <h2>About</h2>
 <div>
 Scrappage.co.uk is developed by Kevin Smith.
