--- a/src/App/templates/app/car-finance.phtml
+++ b/src/App/templates/app/car-finance.phtml
@@ -1,4 +1,6 @@
-<?php $this->headTitle('Car Finance'); ?>
+<?php
+declare(strict_types=1);
+$this->headTitle('Car Finance'); ?>
 <h2 class="entry-title">Car Finance</h2>
 
 
