--- a/src/App/templates/app/car-marques.phtml
+++ b/src/App/templates/app/car-marques.phtml
@@ -1,4 +1,6 @@
-<?php $this->headTitle($this->marque); ?>
+<?php
+declare(strict_types=1);
+$this->headTitle($this->marque); ?>
 <div>
     <h2><b><?= $this->marque?></b></h2>
     <?php
