--- a/src/App/templates/app/home-page.phtml
+++ b/src/App/templates/app/home-page.phtml
@@ -1,4 +1,6 @@
-<?php $this->headTitle('Home'); ?>
+<?php
+declare(strict_types=1);
+$this->headTitle('Home'); ?>
 <h1>Scrappage</h1>
 <p>Find the latest 2017 Scrappage Schemes and deals from  <a href="https://scrappage.co.uk/sp/toyota-scrappage-scheme-2017/">Toyota</a>, <a href="https://scrappage.co.uk/sp/ford/">Ford</a>, <a href="https://scrappage.co.uk/sp/kia-scrappage-scheme-2017/">Kia</a>, <a href="https://scrappage.co.uk/sp/hyundai/">Hyundai</a> and <a href="https://scrappage.co.uk/sp/all-makes/">others</a>
 
