--- a/src/App/templates/app/logoff.phtml
+++ b/src/App/templates/app/logoff.phtml
@@ -1,4 +1,6 @@
-<?php $this->headTitle('Log Off'); ?>
+<?php
+declare(strict_types=1);
+$this->headTitle('Log Off'); ?>
 <h2>Log Off</h2>
 <?= $this->status ?>
 
