--- a/src/App/templates/app/scrappage-schemes-explained.phtml
+++ b/src/App/templates/app/scrappage-schemes-explained.phtml
@@ -1,4 +1,6 @@
-<?php $this->headTitle('Scrappage Schemes Explained'); ?>
+<?php
+declare(strict_types=1);
+$this->headTitle('Scrappage Schemes Explained'); ?>
 <h2>Scrappage Schemes Explained</h2>
     <br />
     <br />
