--- a/src/App/templates/app/verify.phtml
+++ b/src/App/templates/app/verify.phtml
@@ -1,4 +1,6 @@
-<?php $this->headTitle('Verify'); ?>
+<?php
+declare(strict_types=1);
+$this->headTitle('Verify'); ?>
 <h2 class="entry-title">Verify</h2>
 
 
