--- a/src/App/templates/error/error.phtml
+++ b/src/App/templates/error/error.phtml
@@ -1,4 +1,6 @@
-<?php $this->headTitle(sprintf('%d %s', $this->status, $this->reason)); ?>
+<?php
+declare(strict_types=1);
+$this->headTitle(sprintf('%d %s', $this->status, $this->reason)); ?>
 
 <h1>Oops!</h1>
 <h2>This is awkward.</h2>
