--- a/src/App/templates/app/search.phtml
+++ b/src/App/templates/app/search.phtml
@@ -1,10 +1,14 @@
 <?php
+declare(strict_types=1);
 $this->headTitle('Search');
 $this->form->prepare();
 $this->form->setAttribute('method', 'post');
 $this->form->setAttribute('class', 'form-inline');
 $sform = $this->form()->openTag($this->form);
 
+/**
+ * @var  \Zend\Form\Element $element
+ */
 foreach ($this->form->getElements() as $name => $element) :
 
     switch($element->getAttributes()['type']) {
