--- a/src/App/templates/error/404.phtml
+++ b/src/App/templates/error/404.phtml
@@ -1,4 +1,6 @@
-<?php $this->headTitle('404 Not Found'); ?>
+<?php
+declare(strict_types=1);
+$this->headTitle('404 Not Found'); ?>
 
 <h1>Oops!</h1>
 <h2>This is awkward.</h2>
