--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -1,4 +1,5 @@
 <?php
+declare(strict_types=1);
 
 $rn = $this->routeHelper()->getMatchedRouteName();
 $rp = $this->routeHelper()->getMatchedParams();
