--- a/src/App/templates/layout/originaldefault.phtml
+++ b/src/App/templates/layout/originaldefault.phtml
@@ -1,4 +1,5 @@
 <?php
+declare(strict_types=1);
 $this->headLink()
     ->prependStylesheet('https://use.fontawesome.com/releases/v5.0.6/css/all.css')
     ->prependStylesheet('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css');
