Code Style & Inspection fixes

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -100,9 +100,7 @@ ins {
     background-color: lightgreen;
     vertical-align: bottom;
     width: 10rem;
-    border-width: 2px;
-    border-color: lightgray;
-    border-style:solid;
+    border: 2px solid lightgray;
 }
 
 .priceinput {
