--- a/src/App/templates/app/car-models.phtml
+++ b/src/App/templates/app/car-models.phtml
@@ -126,7 +126,7 @@ EOF;
         echo $grid;
     }
     else {
-        echo "Not found";
+        echo "$marqueLink $modelHtml data not found";
     }
 ?>
 </div>
