--- a/src/App/templates/app/verify.phtml
+++ b/src/App/templates/app/verify.phtml
@@ -6,7 +6,7 @@ $this->headTitle('Verify'); ?>
 
 <div class="entry-content">
     <?php
-        if ($this->verified == 'Verified')
+        if ($this->verified === 'Verified')
         {
             $logOnLink = $this->serverUrl($this->url('log-on'));
             echo "Account Verified, you may <a href=\"$logOnLink\">Log On</a>";
