Change affiliate link.

--- a/src/App/templates/app/car-model.phtml
+++ b/src/App/templates/app/car-model.phtml
@@ -134,7 +134,7 @@ $hpform =<<<EOF
     <div class="quotegridvalue"><span style="color:green; font-weight:bold; font-size:xx-large" class="quotedisplay monthlypayment $paraident">0</span></div>    
 
     <div class="quotegridtext">
-       <b><i>STEP 2.</i></b> Get it financed at <a href="http://www.paidonresults.net/c/49722/1/1433/clc1" style="font-size:x-large">Car Loans Compare</a> 
+       <b><i>STEP 2.</i></b> Get it financed at <a href="https://www.paidonresults.net/c/49722/1/1819/0" style="font-size:x-large">Car Finance Deals</a> 
     </div>
 
         
