--- a/src/App/templates/app/hire-purchase-hp.phtml
+++ b/src/App/templates/app/hire-purchase-hp.phtml
@@ -33,4 +33,4 @@
 <h3>Where to Find HP Finance Deals on New Cars</h3>
 <p>HP Finance Providers Car dealers will be only too willing to sign you up to a deal (though they may point you in the direction of PCP rather than HP). Alternatively you can go to specialist finance dealers, e.g</p>
 <p><!--<a href="https://www.carfinance247.co.uk" target="_blank" rel="noopener">Car Finance 247</a>--><br />
-    <a href="http://www.paidonresults.net/c/49722/1/1433/clc1">Car Loans Compare</a></p>
+    <a href="https://www.paidonresults.net/c/49722/1/1819/0">Car Finance Deals</a></p>
